--- a/sass/partials/_officers.scss
+++ b/sass/partials/_officers.scss
@@ -37,3 +37,7 @@
   color: #888;
   margin-bottom: 10px;
 }
+
+#officers img {
+  width:100%;
+}
